samples/_failures_safe/1761452797_d06615_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f949ecc3.c: In function ‘main’:
./samples/SAFE/__tmp_f949ecc3.c:170:12: error: missing terminating " character
  170 |     printf("\nMatrix 1
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_f949ecc3.c:170:5: error: expected expression at end of input
  170 |     printf("\nMatrix 1
      |     ^~~~~~
./samples/SAFE/__tmp_f949ecc3.c:170:5: error: expected declaration or statement at end of input
